--- a/task_5/task_5.vcxproj
+++ b/task_5/task_5.vcxproj
@@ -141,13 +141,17 @@
   <ItemGroup>
     <ClCompile Include="ConsoleInterface.cpp" />
     <ClCompile Include="InfoAboutUniversity.cpp" />
+    <ClCompile Include="List.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="task_5.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleInterface.h" />
     <ClInclude Include="InfoAboutUniversity.h" />
+    <ClInclude Include="List.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Node.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="stud.txt" />
